--- a/css/history.css
+++ b/css/history.css
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+/*table
+------------------*/
 * {
   font-family: "游明朝体", "Yu Mincho", YuMincho, "ヒラギノ明朝 Pro", "Hiragino Mincho Pro", "MS P明朝", "MS PMincho", serif;
   margin: 0;
@@ -13,19 +15,11 @@ html {
 /*ヘッダー*/
 #header {
   width: 90vw;
-  overflow: hidden;
   background: #141000;
   padding: 1% 5%;
   position: fixed;
   z-index: 2;
   vertical-align: middle;
-}
-
-@media screen and (max-width: 480px) {
-  #header {
-    position: relative;
-    overflow: hidden;
-  }
 }
 
 #header h1 {
@@ -40,15 +34,12 @@ html {
 }
 
 #header #nav {
-  overflow: hidden;
   float: right;
   background-color: #141000;
 }
 
 @media screen and (max-width: 480px) {
   #header #nav {
-    display: block;
-    z-index: 3;
     float: none;
     position: absolute;
     height: 100vh;
@@ -57,6 +48,9 @@ html {
     top: 0;
     -webkit-transition: 0.7s;
     transition: 0.7s;
+  }
+  #header #nav ul {
+    margin-top: 50%;
   }
 }
 
@@ -86,6 +80,7 @@ html {
 @media screen and (max-width: 480px) {
   #header #nav li a {
     text-align: center;
+    font-size: 1.5rem;
   }
 }
 
@@ -111,7 +106,7 @@ html {
     z-index: 4;
     display: block;
     position: absolute;
-    top: 25%;
+    top: 30%;
     right: 30px;
     width: 10%;
     height: 50%;
@@ -134,25 +129,29 @@ html {
     top: 0;
   }
   #header #hamburger #line2 {
-    top: 50%;
+    top: 45%;
   }
   #header #hamburger #line3 {
-    bottom: 0px;
+    bottom: 0;
   }
   #header #hamburger .line_1, #header #hamburger .line_2, #header #hamburger .line_3 {
     background: #fff;
   }
   #header #hamburger .line_1 {
-    -webkit-transform: translateY(10%) rotate(-45deg);
-            transform: translateY(10%) rotate(-45deg);
+    -webkit-transform: translateY(14px) rotate(-45deg);
+            transform: translateY(14px) rotate(-45deg);
+    -webkit-transform-origin: 　center center;
+            transform-origin: 　center center;
     top: 0;
   }
   #header #hamburger .line_2 {
     opacity: 0;
   }
   #header #hamburger .line_3 {
-    -webkit-transform: translateY(10%) rotate(45deg);
-            transform: translateY(10%) rotate(45deg);
+    -webkit-transform: translateY(0) rotate(45deg);
+            transform: translateY(0) rotate(45deg);
+    -webkit-transform-origin: 　0 0;
+            transform-origin: 　0 0;
     bottom: 0;
   }
 }
@@ -167,7 +166,7 @@ html {
 }
 
 .page-title {
-  margin: 5%;
+  margin: 15vh 0;
   text-align: center;
 }
 
@@ -179,6 +178,11 @@ html {
 .page-title p {
   color: #CDA946;
   line-height: 1.5em;
+}
+
+.contents-wrapper {
+  /*table
+------------------*/
 }
 
 .contents-wrapper h2 {
@@ -194,6 +198,44 @@ html {
   display: block;
   width: 75vw;
   margin: 0 auto;
+}
+
+.contents-wrapper table {
+  border-collapse: collapse;
+  border-top: #141000 1px solid;
+  border-left: #141000 1px solid;
+  margin: 2% auto 10%;
+}
+
+.contents-wrapper table td, .contents-wrapper table th {
+  border-bottom: #141000 1px solid;
+  border-right: #141000 1px solid;
+  padding: 1% 3%;
+  vertical-align: middle;
+}
+
+@media screen and (max-width: 480px) {
+  .contents-wrapper table td, .contents-wrapper table th {
+    font-size: 0.8rem;
+    padding: 1.5% 1.2%;
+  }
+}
+
+.contents-wrapper table th {
+  font-weight: normal;
+  background-color: rgba(205, 169, 70, 0.5);
+}
+
+.contents-wrapper table td {
+  font-weight: normal;
+}
+
+.contents-wrapper table .typeg {
+  background: rgba(205, 169, 70, 0.5);
+}
+
+.contents-wrapper table .nowrap {
+  white-space: nowrap;
 }
 
 .contents-wrapper .contents {
@@ -335,6 +377,8 @@ footer p {
     display: block;
     -webkit-transform: scale(0.5);
             transform: scale(0.5);
+    -webkit-transform-origin: 35% center;
+            transform-origin: 35% center;
   }
 }
 /*# sourceMappingURL=history.css.map */
