--- a/css/index.scss
+++ b/css/index.scss
@@ -9,7 +9,10 @@
 html {
     height: 100vh;
     margin: 0;
+    
 }
+
+
 
 
 #header{
@@ -21,8 +24,6 @@ html {
     margin: 0 auto;
     @media screen and (max-width:480px){
         width: auto;
-        transform: scale(0.7);
-        transform-origin: top center;
     }
 }
 
@@ -49,9 +50,9 @@ html {
         font-weight: normal;
     }
     @media screen and (max-width:480px){
+        transform: scale(0.7);
         h3{
             font-size: 10px;
-            
             line-height: 1.5em;
         }
     }
@@ -74,48 +75,21 @@ html {
         height: auto;
         position: absolute;
         top: 0;
-        animation-name: fadeleft;
-        animation-duration: 5s;
-        animation-iteration-count: infinite;
-        
     }
-    @keyframes fadeleft {
-    from {
-        opacity: 0;
-         transform: translateX(150px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-    }
+
     .wagara-right{
         height: auto;
         position: absolute;
         bottom: 0;
         right: 0;
-        animation-name: faderight;
-        animation-duration: 5s;
-        animation-iteration-count: infinite;
-        
     }
-    @keyframes faderight {
-    from {
-        opacity: 0;
-        transform: translateX(-150px);
-    }
-    to {
-        opacity: 1;
-    transform: translateX(0);
-    }
-    }
+
     .container{
         margin: 0 auto;
         width: 60%;
         display: flex;
         align-items: center;
         justify-content: center;
-        
         
         .title{
             width: 10%;
@@ -154,6 +128,10 @@ html {
 }
 
 .contents-wrapper{
+    a{
+        text-decoration: none;
+        display: block;
+    }
     .contents{
         display: flex;
         align-items: center;
@@ -171,6 +149,18 @@ html {
         .title{
             margin: 0 5%;
             position: relative;
+            color: $black;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            h2{
+                writing-mode: vertical-rl;
+                margin-bottom: 40%;
+            }
+            p{
+                text-align: center;
+                white-space: nowrap;
+            }
             .view-more-hover{
                 transition:all 1s ease-out;
                 opacity:0.8;
@@ -178,7 +168,7 @@ html {
                 width: 60%;
                 height: 30%;
                 position: absolute;
-                bottom: 15%;
+                bottom: 5%;
                 left: 20%;
                 &::before{
                     content: "";
@@ -208,20 +198,13 @@ html {
                     left: 5%;
                   }
               }
-            
-              img{
-                width: 10vw;
-                @media screen and (max-width:480px){
-                    width: 50vw;
-                }
-              }
         }
         .image{
             margin: 0 5%;
             img{
                 width: 30vw;
                 @media screen and (max-width:480px){
-                    width: 120vw;
+                    width: 100vw;
                     margin: 15% 0;
                 }
             }
