--- a/css/description.scss
+++ b/css/description.scss
@@ -66,7 +66,7 @@ html {
             img{
                 width: 30vw;
                 @media screen and (max-width:480px){
-                    width: 100vw;
+                    width: 100%;
                     margin: 15% 0;
                 }
             }
