--- a/css/guide.css
+++ b/css/guide.css
@@ -158,7 +158,7 @@ html {
 }
 
 .top-wrapper {
-  width: 100vw;
+  width: 100%;
 }
 
 .top-wrapper img {
@@ -207,6 +207,12 @@ html {
   border-left: #141000 1px solid;
   margin: 2% auto 10%;
   width: 100%;
+}
+
+@media screen and (max-width: 480px) {
+  .contents-wrapper table {
+    margin: 2% 2% 10% 2%;
+  }
 }
 
 .contents-wrapper table td, .contents-wrapper table th {
@@ -298,7 +304,7 @@ html {
 .information {
   background-color: #E8E7E3;
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
 }
 
 .information .container {
@@ -359,7 +365,7 @@ html {
 }
 
 footer {
-  width: 100vw;
+  width: 100%;
   background-color: #141000;
   overflow: hidden;
 }
