--- a/css/index.css
+++ b/css/index.css
@@ -167,7 +167,7 @@ html {
 }
 
 .top-wrapper {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-position: center center;
   background-size: cover;
@@ -208,7 +208,7 @@ html {
 }
 
 .news-wrapper {
-  width: 100vw;
+  width: 100%;
   background-color: rgba(205, 169, 70, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -413,7 +413,7 @@ html {
 
 @media screen and (max-width: 480px) {
   .contents-wrapper .contents .image img {
-    width: 100vw;
+    width: 100%;
     margin: 15% 0;
   }
 }
@@ -421,7 +421,7 @@ html {
 .information {
   background-color: #E8E7E3;
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
 }
 
 .information .container {
@@ -482,7 +482,7 @@ html {
 }
 
 footer {
-  width: 100vw;
+  width: 100%;
   background-color: #141000;
   overflow: hidden;
 }
