--- a/css/index.scss
+++ b/css/index.scss
@@ -28,7 +28,7 @@ html {
 }
 
 .top-wrapper{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-position: center center;
     background-size: cover;
@@ -59,7 +59,7 @@ html {
 }
 
 .news-wrapper{
-    width: 100vw;
+    width: 100%;
     background-color: rgba($yellow,0.5);
     display: flex;
     align-items: center;
@@ -204,7 +204,7 @@ html {
             img{
                 width: 30vw;
                 @media screen and (max-width:480px){
-                    width: 100vw;
+                    width: 100%;
                     margin: 15% 0;
                 }
             }
